.provarCaches/00D5f000005vwGkEAI/objects/rstk__wodmddismprnt__c.object
<CustomObject>
    <description>wodmddismprnt__c
Work Order Demands for Disassembly</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_compitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>compitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_compitemdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>COMPITEMDESCR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_coreduedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>COREDUEDTE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_coreitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>coreitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print (coreitem)</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_coreitemdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>COREITEMDESCR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_coreqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>COREQTY</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disgoodlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>disgoodlocid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disgoodlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DISGOODLOCNUM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disncmlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>disncmlocid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print (disncmlocid)</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disncmlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DISNCMLOCNUM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disrcvlocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>disrcvlocid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print (disrcvlocid)</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disrcvlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DISRCVLOCNUM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disscraplocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>disscraplocid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print (disscraplocid)</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_disscraplocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DISSCRAPLOCNUM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwodmddismprnts</relationshipLabel>
        <relationshipName>divwodmddismprnts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_ordlne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDLNE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ordno</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Demand Disassembly Print</relationshipLabel>
        <relationshipName>WO_Demand_Disassembly_Print</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtydisgood__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYDISGOOD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtydisncm__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYDISNCM</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtydisscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYDISSCRAP</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtyplanrealized__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYPLANREALIZED</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtyreqd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYREQD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_qtyvariance__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYVARIANCE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>wodmddismprnts</relationshipLabel>
        <relationshipName>wodmddismprnts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wodmddismprnt_yldfctr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>YLDFCTR</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>WO Demand Disassembly Print</label>
    <nameField>
        <label>WODMDDISMPRNT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Demand Disassembly Print</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>